# trace_of_product

./: Dockerfile  go.mod  go.sum  main.go  readme(中文).md  readme.md  测试报告.md
Keys/1/: PRI_KEY  PUB_KEY
Keys/1049579264/: PRI_KEY  PUB_KEY
Keys/3336768422/: PRI_KEY
Keys/4630668493/: PRI_KEY  PUB_KEY
Keys/4811424397/: PUB_KEY
Keys/4978527187/: PRI_KEY  PUB_KEY
Keys/5951785629/: PRI_KEY
Keys/6044588247/: PRI_KEY  (+1 more)
control_system/: config.yaml  go.mod  go.sum  index.html  main.go  main.html
core/: block.go  block_test.go  blockchain.go  blockchain_test.go  eggplant.go  eggplant_test.go  encoding.go  hasher.go  transaction.go  validator.go
crypto/: key_storage.go  keypair.go  keypair_test.go
database/: create.go  database_test.go  search.go
front-app/: .env  main.html  package-lock.json  package.json  tsconfig.json
front-end/: index.html  main.html
my-server/: package.json  server.js
network/: local_transport.go  local_transport_test.go  node.go  nodeTable.go  node_test.go  pbft.go  rpc.go  server.go  txpool.go
plookup/: Cargo.toml
plookup/src/: kzg10.rs  lib.rs  transcript.rs
plookup/src/lookup/: lookup.rs
plookup/src/multiset/: multiset.rs  proof.rs  quotient_poly.rs
snarkjs/: metadata_circuit.circom  metadata_circuit.r1cs  metadata_circuit.sym  metadata_circuit_0000.zkey  metadata_circuit_0001.zkey  pot12_0001.ptau  pot12_0002.ptau  pot12_beacon.ptau  test_imput.json  verification_key.json  verifier.sol
trace_of_product/: Dockerfile  config.yaml  createDatabase.sql  go.sum  main.go
utils/: log.go  read_config.go  utils_test.go
(+642 files in other folders)
